# django-template

./: .gitignore  README.md  pyproject.toml
docker/local/: Dockerfile
docker/prod/: Dockerfile
src/base/: models.py
src/config/: settings.py
src/users/: admin.py  models.py
